2008-04-16  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkStubInit.c:			make stubs tables static const
	* generic/tkWindow.c (Initialize):	and export only a module-scope
	pointer to to the main stubs table (for package init). [Patch 1938497]

2008-04-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c:	Fix [tk_chooseColor -title]. [Bug 1941740]
	* win/tkWinTest.c:	Added parent to testgetwininfo
	* tests/winDialog.test:	Created some tk_chooseColor win tests.

2008-04-09  Jan Nijtmans  <nijtmans@users.sourceforge.net>

	* generic/tkImgGIF.c:	Let the GIF writer use a real LZW compressor.

2008-04-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/ttkWinXpTheme.c:  Provide a visual-styles API element engine
	* tests/ttk/vsapi.test: to permit scripts to create any available
	* doc/ttk_vsapi.n:      windows xp/vista element. Plus basic tests.

2008-04-08  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkDecls.h:		make genstubs (genStubs.tcl changes).
	* generic/tkIntDecls.h:
	* generic/tkIntPlatDecls.h:
	* generic/tkIntXlibDecls.h:
	* generic/tkPlatDecls.h:

2008-04-08  Kevin Kenny  <kennykb@acm.org>

	* tkWinEmbed.c:  Removed #if 0 code. Trust the revision control system,
	                 if you need it again, you can find it.

	* tkWinSend.c:   Added conditional compilation to silence several
	                 compiler warnings.
	
2008-04-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkWindow.c (Initialize): fix double-free on Tk_ParseArgv
	* tests/main.test (main-3.*):      error. [Bug 1937135]

	* generic/tkArgv.c: fix -help mem explosion. [Bug 1936238] (kenny)

2008-04-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/sizegrip.tcl: Don't resize if the toplevel is not
	resizable or the sizegrip has been disabled.

2008-04-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:         Fixed stubs usage
	* library/ttk/xpTheme.tcl: fix the colour of labelframe in xp
